Fixes z-index issue on navigation

--- a/src/assets/scss/ui/_navigation.scss
+++ b/src/assets/scss/ui/_navigation.scss
@@ -73,6 +73,7 @@
 
 		> li{
 			position:relative;
+			z-index:999;
 			margin:0;
 
 			/**
